# ytto

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  main.cpp
cmake/: getCPM.cmake  tools.cmake  warnings.cmake
corral/: conanfile.py
include/yto/: boost_stacktrace_format.hpp  cache_file.hpp  ollama_parser.hpp  omega_exception.hpp
include/ytto/: boost_stacktrace_format.hpp  cache.hpp  ollama_parser.hpp
